<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editMacedonian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Внесете македонски збор"
        android:hint="@string/enter_macedonian_word"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/editEnglish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Enter English translation"
        android:hint="@string/enter_english_translation"
        android:layout_marginTop="8dp"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_word_ac"
        android:layout_marginTop="16dp"/>
</LinearLayout>
