<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:id="@+id/main"
    >

    <EditText
        android:id="@+id/searchMacedonian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Венси македонски збор"
        android:hint="@string/search_macedonian_word"
        android:inputType="textMultiLine"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/searchEnglish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Enter english word"
        android:hint="@string/search_english_word"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_word"
        android:layout_marginTop="16dp"/>

    <ListView
        android:id="@+id/wordListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>
</LinearLayout>

